--- a/2-objetivos.tex
+++ b/2-objetivos.tex
@@ -7,7 +7,7 @@ Una vez situado el Trabajo Fin de Grado en su contexto vamos a presentar los obj
 
 Como objetivo global nos proponemos teleoperar un drone desde dispositivos móviles cómo teléfonos o tabletas utilizando tecnologías web de ultima generación. Este objetivo se ha desglosado en tres subobjetivos concretos que explicamos a continuación.\\
 
-Como escenario nos encontramos con un drone que irá a bordo del drone, y una navegador en una máquina remota. Durante toda la memoria nos referiremos como ordenador local, par local o navegador local al dispositivo que usaremos para conectarnos al cuadricóptero y el cuál deberá ir a bordo del drone, y ordenador remoto, par remoto o navegador remoto al ordenador desde el cuál teleoperaremos el vehículo.\\
+Como escenario nos encontramos con un ordenador que irá a bordo del drone, y un navegador en una máquina remota. Durante toda la memoria nos referiremos como ordenador local, par local o navegador local al dispositivo que usaremos para conectarnos al cuadricóptero y el cuál deberá ir a bordo del drone, y ordenador remoto, par remoto o navegador remoto al ordenador desde el cuál teleoperaremos el vehículo.\\
 
 \begin{itemize}
 
@@ -24,7 +24,7 @@ Esta conexión deberá realizarse entre el ordenador local y un segundo ordenado
 
 \item \emph{\textbf{Interfaz de usuario amigable}}: Uno de los subobjetivos es desarrollar una interfaz web de usuario clara, que nos muestre de una manera lo más realista, clara y concisa posible los datos recogidos de los sensores del drone y la cámara para permitirnos conocer el estado de vuelo del drone en cada momento: altitud, inclinación, velocidad...\\
 
-Esta interfaz deberá permitirnos el manejo del cuadricóptero de la forma mas realista y similar posible a los sistemas de control de drones que hemos hablado en el capítulo \ref{cap:controldrones}. Para que la satisfacción de vuelo sea satisfactoria la interfaz tiene que tener unos controles de movimiento que sean sencillos, simples e intuitivos.\\
+Esta interfaz deberá permitirnos el manejo del cuadricóptero de la forma mas realista y similar posible a los sistemas de control de drones que hemos hablado en la sección \ref{cap:controldrones}. Para que la experiencia de vuelo sea satisfactoria la interfaz tiene que tener unos controles de movimiento que sean sencillos, simples e intuitivos.\\
 
 \end{itemize}
 
@@ -43,7 +43,7 @@ Esta metodología recibe su nombre por la forma de espiral que tiene su represen
  \item \textbf{Planificar} las próximas fases tras evaluar el transcurso del proyecto.
 \end{itemize}
 
-\begin{figure}[htb]
+\begin{figure}[h!]
 \centering
 \includegraphics[width=0.9\textwidth]{espiral}
 \caption{Esquema general del desarrollo del proyecto.}
